# pyfood

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  bench_gp_trees.py  benchmark.py  docker-compose.yaml  flake.nix  justfile  pyproject.toml  run_gp3_1000.py
.github/workflows/: lint.yml  test.yml  typecheck.yml
docs/: STATEMENT.md  simulator_api.md
