[project]
name = "pyfood"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["rsimulator", "simulator", "tqdm"]

[tool.uv.sources]
rsimulator = { workspace = true }
simulator = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.4"]
