[project]
name = "pyfood"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["rsimulator", "dvrptw", "tqdm", "pulp>=3.3.0"]

[tool.uv.sources]
rsimulator = { workspace = true }
dvrptw = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.4"]
